--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "codestyle-typescript-fix": "standard --parser typescript-eslint-parser --plugin typescript \"js/**/*.ts\" \"js/**/*.tsx\" --fix",
     "build:dev": "webpack --watch",
     "build": "webpack --mode=production",
+    "start": "webpack-dev-server",
     "prepare": "webpack --mode=production"
   },
   "dependencies": {
@@ -36,6 +37,7 @@
     "eslint-plugin-typescript": "^0.14.0",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.9.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -50,6 +52,7 @@
     "typescript-eslint-parser": "^22.0.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.4.1",
     "webpack-manifest-plugin": "^2.0.4"
   }
 }
