--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   },
   "dependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "redux": "4.0.1",
+    "react-redux": "^7.1.0-alpha.5"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.0.9",
     "autoprefixer": "^9.1.3",
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^0.1.19",
