--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:dev": "webpack --watch",
     "build": "webpack --mode=production",
     "start": "webpack-dev-server",
-    "prepare": "webpack --mode=production"
+    "test": "jest"
   },
   "dependencies": {
     "react": "^16.8.6",
@@ -29,6 +29,7 @@
     "react-redux": "^7.1.0-alpha.5"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.13",
     "@types/node": "^12.0.0",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
@@ -41,16 +42,19 @@
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.8.0",
     "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.9.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
+    "react-testing-library": "^7.0.1",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
     "standard": "^12.0.1",
     "style-loader": "^0.23.0",
     "terser-webpack-plugin": "^1.1.0",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.4.5",
     "typescript-eslint-parser": "^22.0.0",
     "webpack": "^4.27.1",
