--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "typeRoots": ["./lib/typings.d.ts"],
+    "allowJs": true,
+    "typeRoots": ["./lib/typings.d.ts", "node_modules/@types/"],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "jsx": "react",
@@ -14,6 +15,7 @@
     "lib": ["es2015", "dom"]
   },
   "include": [
-    "./lib/**/**/*"
+    "./lib/**/**/*",
+    "./__tests__/**/**/*"
   ]
 }
